# simdee

./: .gitignore  CMakeLists.txt  testsimd.cpp
cmake/: SimdppMultiarch.cmake
jsdimdBuild/include/jsimd/JVec/: config.h  mat4f.h  simd2f.h  simd2f_common.h  simd4f_common.h  simd4f_scalar.h  simd4x4f.h  simd4x4f_gnu.h  simd4x4f_neon.h  simd4x4f_scalar.h  simd4x4f_sse.h  vec3f.h  vec_convert.h  vectorial.h
jsdimdBuild/include/jsimd/config/: jsimd_include.hpp
jsdimdBuild/include/jsimd/math/: jsimd_basic_math.hpp  jsimd_estrin.hpp  jsimd_exp_reduction.hpp  jsimd_fp_manipulation.hpp  jsimd_fp_sign.hpp  jsimd_horner.hpp  jsimd_hyperbolic.hpp  jsimd_math.hpp  jsimd_math_complex.hpp  jsimd_trigo_reduction.hpp
jsdimdBuild/include/jsimd/memory/: jsimd_aligned_stack_buffer.hpp  jsimd_load_store.hpp
jsdimdBuild/include/jsimd/stl/: iterator.hpp
jsdimdBuild/include/jsimd/types/: jsimd_complex_base.hpp  jsimd_int_conversion.hpp  jsimd_neon_double.hpp  jsimd_neon_float.hpp  jsimd_neon_int16.hpp  jsimd_neon_int32.hpp  jsimd_types_include.hpp
jsdimdBuild/lib/cmake/jsimd/: jsimdConfigVersion.cmake
jsdimdBuild/lib/pkgconfig/: jsimd.pc
jsimd/: .appveyor.yml  CMakeLists.txt  jsimd.hpp  jsimd.pc.in  jsimdConfig.cmake.in
jsimd/benchmark/: CMakeLists.txt  jsimd_benchmark.hpp  main.cpp
jsimd/config/: jsimd_include.hpp  jsimd_instruction_set.hpp
jsimd/examples/: CMakeLists.txt  mandelbrot.cpp  pico_bench.hpp
jsimd/include/jsimd/: jsimd.hpp
jsimd/include/jsimd/JVec/: simd2f_neon.h  simd4f.h  simd4f_gnu.h  simd4f_neon.h  simd4f_sse.h  vec2f.h  vec4f.h
jsimd/include/jsimd/config/: jsimd_align.hpp  jsimd_config.hpp  jsimd_include.hpp  jsimd_instruction_set.hpp
jsimd/include/jsimd/math/: jsimd_basic_math.hpp  jsimd_error.hpp  jsimd_estrin.hpp  jsimd_exponential.hpp  jsimd_fp_sign.hpp  jsimd_gamma.hpp  jsimd_horner.hpp  jsimd_hyperbolic.hpp  jsimd_invtrigo.hpp  jsimd_logarithm.hpp  jsimd_math_complex.hpp  jsimd_numerical_constant.hpp  jsimd_power.hpp  jsimd_rounding.hpp  jsimd_scalar.hpp  jsimd_trigo_reduction.hpp  jsimd_trigonometric.hpp
jsimd/include/jsimd/memory/: jsimd_aligned_allocator.hpp
jsimd/include/jsimd/stl/: algorithms.hpp
jsimd/include/jsimd/types/: jsimd_avx512_int32.hpp  jsimd_avx512_int_base.hpp  jsimd_avx_double.hpp  jsimd_avx_float.hpp  jsimd_avx_int8.hpp  jsimd_base.hpp  jsimd_base_bool.hpp  jsimd_complex_base.hpp  jsimd_fallback.hpp  jsimd_int_conversion.hpp  jsimd_neon_bool.hpp  jsimd_neon_complex.hpp  jsimd_neon_conversion.hpp  jsimd_neon_double.hpp  jsimd_neon_float.hpp  jsimd_neon_int16.hpp  jsimd_neon_int32.hpp  jsimd_neon_int64.hpp  jsimd_neon_int8.hpp  jsimd_neon_uint16.hpp  jsimd_neon_uint32.hpp  jsimd_neon_uint64.hpp  jsimd_neon_uint8.hpp  jsimd_neon_utils.hpp  jsimd_sse_int64.hpp  jsimd_sse_int_base.hpp  jsimd_traits.hpp  jsimd_types_include.hpp  jsimd_utils.hpp
jsimd/math/: jsimd_exp_reduction.hpp  jsimd_exponential.hpp  jsimd_gamma.hpp  jsimd_invtrigo.hpp  jsimd_math.hpp  jsimd_scalar.hpp
jsimd/memory/: jsimd_alignment.hpp
jsimd/stl/: iterator.hpp
jsimd/test/: CMakeLists.txt  copyGTest.cmake.in  downloadGTest.cmake.in  jsimd_algorithms.cpp  jsimd_api_test.cpp  jsimd_api_test.hpp  jsimd_basic_math_test.cpp  jsimd_basic_math_test.hpp  jsimd_basic_test.cpp  jsimd_basic_test.hpp  jsimd_cexponential_test.cpp  jsimd_cexponential_test.hpp  jsimd_chyperbolic_test.cpp  jsimd_chyperbolic_test.hpp  jsimd_complex_basic_test.hpp  jsimd_complex_tester.hpp  jsimd_cpower_test.cpp  jsimd_cpower_test.hpp  jsimd_ctrigonometric_test.cpp  jsimd_ctrigonometric_test.hpp  jsimd_error_gamma_test.cpp  jsimd_error_gamma_test.hpp  jsimd_exponential_test.cpp  jsimd_exponential_test.hpp  jsimd_fp_manipulation_test.cpp  jsimd_fp_manipulation_test.hpp  jsimd_hyperbolic_test.cpp  jsimd_hyperbolic_test.hpp  jsimd_interface_test.cpp  jsimd_memory_test.cpp  jsimd_poly_evaluation_test.cpp  jsimd_poly_evaluation_test.hpp  jsimd_power_test.cpp  jsimd_power_test.hpp  jsimd_rounding_test.cpp  jsimd_rounding_test.hpp  jsimd_test_utils.hpp  jsimd_tester.hpp  jsimd_trigonometric_test.cpp  jsimd_trigonometric_test.hpp  (+1 more)
jsimd/types/: jsimd_avx512_bool.hpp  jsimd_avx512_complex.hpp  jsimd_avx512_conversion.hpp  jsimd_avx512_int16.hpp  jsimd_avx512_int64.hpp  jsimd_avx512_int_base.hpp  jsimd_avx_complex.hpp  jsimd_avx_conversion.hpp  jsimd_avx_int32.hpp  jsimd_base.hpp  jsimd_complex_base.hpp  jsimd_int_conversion.hpp  jsimd_neon_conversion.hpp  jsimd_neon_int16.hpp  jsimd_neon_utils.hpp  jsimd_sse_conversion.hpp  jsimd_sse_float.hpp  jsimd_types_include.hpp
jsimdBuild/include/jsimd/: jsimd.hpp
jsimdBuild/include/jsimd/config/: jsimd_align.hpp  jsimd_config.hpp  jsimd_include.hpp
jsimdBuild/include/jsimd/math/: jsimd_estrin.hpp  jsimd_fp_manipulation.hpp  jsimd_hyperbolic.hpp  jsimd_numerical_constant.hpp  jsimd_rem_pio2.hpp
jsimdBuild/include/jsimd/memory/: jsimd_aligned_allocator.hpp  jsimd_aligned_stack_buffer.hpp  jsimd_alignment.hpp  jsimd_load_store.hpp
jsimdBuild/include/jsimd/types/: jsimd_avx512_double.hpp  jsimd_avx512_float.hpp  jsimd_avx512_int8.hpp  jsimd_avx_int16.hpp  jsimd_avx_int64.hpp  jsimd_avx_int_base.hpp  jsimd_fallback.hpp  jsimd_neon_complex.hpp  jsimd_neon_int8.hpp  jsimd_neon_uint16.hpp  jsimd_neon_uint64.hpp  jsimd_sse_complex.hpp  jsimd_sse_double.hpp  jsimd_sse_int16.hpp  jsimd_sse_int32.hpp  jsimd_sse_int8.hpp  jsimd_types_include.hpp
jsimdBuild/lib/cmake/jsimd/: jsimdConfig.cmake  jsimdTargets.cmake
jsimdBuild/lib/pkgconfig/: jsimd.pc
jsimdBuild2/include/jsimd/config/: jsimd_align.hpp  jsimd_config.hpp
jsimdBuild2/include/jsimd/math/: jsimd_exp_reduction.hpp  jsimd_fp_manipulation.hpp  jsimd_fp_sign.hpp  jsimd_horner.hpp  jsimd_logarithm.hpp  jsimd_math.hpp  jsimd_numerical_constant.hpp  jsimd_trigonometric.hpp
jsimdBuild2/lib/pkgconfig/: jsimd.pc
oculusTest2/: oculusTest2.sln  oculusTest2.uproject
oculusTest2/Source/: oculusTest2.Target.cs  oculusTest2Editor.Target.cs
oculusTest2/Source/oculusTest2/: VRPawnHandAnimBP.cpp  VRPawnHandAnimBP.h  VRPlayerPawn.cpp  VRPlayerPawn.h  oculusTest2.Build.cs  oculusTest2.cpp
(+11 files in other folders)
